@@ -1,3 +1,7 @@
+2006-06-05  Gautier Portet <kassoulet gmail com>
+
+	* soundconverter.py: Merged CustomFileChooser from 0.10 branch.
+
 2006-06-03  Gautier Portet <kassoulet gmail com>
 
 	* Makefile: Applied Gentoo fixes (thanks Hanno).
